<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#EEB4B4"
    tools:context="academia.com.br.academia.CardapioActivity">

    <TextView android:text="@string/title_activity_cardapio"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicioTelaButtonSair"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicioTelaButtonVoltar"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:background="@drawable/lanche"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButtonLanche"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp" />

    <ImageButton
        android:background="@drawable/jantar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButtonJantar"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:background="@drawable/almoco"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButtonAlmoco"
        android:layout_above="@+id/imageButtonJantar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:background="@drawable/cafemanha"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButtonCafe"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/imageButtonAlmoco"
        android:layout_alignEnd="@+id/imageButtonAlmoco" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Café da Manhã"
        android:id="@+id/checkBoxCafe"
        android:layout_alignTop="@+id/imageButtonCafe"
        android:layout_toRightOf="@+id/imageButtonCafe"
        android:layout_toEndOf="@+id/imageButtonCafe"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Almoço"
        android:id="@+id/checkBoxAlmoco"
        android:checked="false"
        android:layout_below="@+id/imageButtonCafe"
        android:layout_toRightOf="@+id/imageButtonAlmoco"
        android:layout_toEndOf="@+id/imageButtonAlmoco" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Janta"
        android:id="@+id/checkBoxJanta"
        android:layout_alignTop="@+id/imageButtonJantar"
        android:layout_alignLeft="@+id/checkBoxCafe"
        android:layout_alignStart="@+id/checkBoxCafe"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lanche"
        android:id="@+id/checkBoxKLanche"
        android:layout_alignTop="@+id/imageButtonLanche"
        android:layout_alignLeft="@+id/checkBoxJanta"
        android:layout_alignStart="@+id/checkBoxJanta"
        android:checked="false" />


</RelativeLayout>
